--- a/src/this-page.liquid
+++ b/src/this-page.liquid
@@ -2,6 +2,6 @@
 layout: pagesLayout.njk
 ---
 
-<div class="page">
+<div class="page" data-lenis-prevent>
   {% renderFile "./src/_includes/aboutThisPagePage.md" %}
 </div>
