--- a/src/_includes/_me.liquid
+++ b/src/_includes/_me.liquid
@@ -1,4 +1,4 @@
-<section class="me__images">
+<section class="me__images" data-lenis-prevent>
   <div
     class="me__images__image"
     img-loading-me
@@ -15,7 +15,7 @@
       aspect-ratio: 1080/1440;
       overflow: hidden;
       display: inline-block;
-    "></div>
+    ">
 </div>
 
   <div
@@ -34,8 +34,8 @@
       aspect-ratio: 1080/1440;
       overflow: hidden;
       display: inline-block;
-    "
-    ></div>
+    ">
+</div>
 
   <div
     class="me__images__image"
@@ -46,7 +46,6 @@
     il-height="1440"
     il-aspect-ratio="1080/1440"
     il-main-color="rgb(105,111,113)"
-    
     style="
     max-width: 100%;
     max-height: 100%;
@@ -54,8 +53,8 @@
     aspect-ratio: 1080/1440;
     overflow: hidden;
     display: inline-block;
-  "
-    ></div>
+  ">
+</div>
 
 </section>
 <div class="me__section">
