--- a/src/_includes/baselayout.njk
+++ b/src/_includes/baselayout.njk
@@ -21,14 +21,16 @@ title: Tsuru No Mundo - Daily
         <script src="js/script.js" type="module" defer></script>
     </head>
     <body>
-        {% include '_header.liquid' %}
-        {% include '_about.liquid' %}
-        {% include '_donate.liquid' %}
+        <section class="body__info">
+            {% include '_header.liquid' %}
+            {% include '_about.liquid' %}
+            {% include '_donate.liquid' %}
+            {% include '_me.liquid' %}
+            {% include '_changeLog.liquid' %}
+            {% include '_neighbors.liquid' %}
+            {% include '_footer.liquid' %}
+        </section>
         {{ content | safe }}
-        {% include '_me.liquid' %}
-        {% include '_changeLog.liquid' %}
-        {% include '_neighbors.liquid' %}
-        {% include '_footer.liquid' %}
         {% include '_filters.liquid' %}
         <div class="modal">
             <div class="modal__content">
